--- a/src/css/Login.module.css
+++ b/src/css/Login.module.css
@@ -1,8 +1,16 @@
-/* Login.css */
+.loginContainerItems {
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
 .loginContainer {
-    width: 300px;
-    margin: 0 auto;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
     padding: 20px;
     background-color: #f7f7f7;
     border-radius: 8px;
@@ -16,6 +24,7 @@
   
   .formGroup {
     margin-bottom: 15px;
+    margin-right: 15px;
     text-align: left;
   }
   
@@ -46,7 +55,7 @@
     padding: 10px;
     background-color: #007bff;
     color: #fff;
-    border: none;
+    border: 1px solid #000;
     border-radius: 4px;
     font-weight: bold;
     cursor: pointer;
@@ -63,3 +72,6 @@
     margin-top: 10px;
   }
   
+  .containerImageLogin {
+
+  }
