--- a/src/css/Modal.module.css
+++ b/src/css/Modal.module.css
@@ -14,6 +14,7 @@
 
 .modal {
     background-color: white;
+    border: 5px solid #000;
     padding: 20px;
     border-radius: 8px;
     width: 500px;
@@ -32,10 +33,11 @@
 
 .modal button {
     background-color: #ff5733;
+    border-radius: 10px;
+    border: 1px solid #000;
+    width: 100px;
     color: white;
     padding: 10px;
-    border: none;
-    border-radius: 4px;
     cursor: pointer;
     font-size: 16px;
 }
