--- a/src/css/PostList.module.css
+++ b/src/css/PostList.module.css
@@ -12,12 +12,12 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
     width: 80%;
-    padding: 10px;
 }
 
 .item {
     height: 200px;
-    background-color: #4CAF50;
+    background-color: #C3B6FE;
+    border: 2px solid #000;
     color: white;
     display: flex;
     flex-direction: column;
@@ -26,10 +26,6 @@
     font-size: 20px;
     border-radius: 20px;
     padding: 30px;
-    -webkit-box-shadow: 10px 10px 24px -1px rgba(204, 202, 202, 0.75);
-    -moz-box-shadow: 10px 10px 24px -1px rgba(167, 163, 163, 0.75);
-    box-shadow: 10px 10px 24px -1px rgba(189, 185, 185, 0.75);
-
 }
 
 .item:hover {
