--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(210, 224, 10, 0.87);
-  background-color: #242424;
+  background-color: #F3F4F5;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -13,3 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
