--- a/src/css/Header.module.css
+++ b/src/css/Header.module.css
@@ -1,34 +1,46 @@
 .header {
     width: 100%;
-    position: static;
+    position: relative;
+    top: auto;
+    z-index: auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 10px 20px;
     background-color: #333;
     color: white;
-  }
-  
-  .logo {
+}
+
+.logo {
     font-size: 24px;
     font-weight: bold;
     color: #fff;
     text-decoration: none;
-  }
-  
-  .navMenu {
+}
+
+.navMenu {
     display: flex;
     gap: 20px;
-  }
-  
-  .navLink {
+    padding: 10px;
+}
+
+.navLink {
     color: #fff;
     text-decoration: none;
     font-size: 18px;
     transition: color 0.3s ease;
-  }
-  
-  .navLink:hover {
-    color: #ff6347; 
-  }
-  
+}
+
+.navLinkLogo {
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    background-color: #fff;
+    width: 35px;
+    height: 35px;
+    border-radius: 50px;
+    text-align: center;
+}
+
+.navLink:hover {
+    color: #ff6347;
+}
