--- a/src/css/PostList.module.css
+++ b/src/css/PostList.module.css
@@ -11,7 +11,7 @@
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
-    width: 80%;
+    width: 100%;
 }
 
 .item {
@@ -68,4 +68,48 @@
     background-color: rgb(147, 160, 152);
     color: #fff;
     cursor: pointer;
+}
+
+@media only screen and (max-width: 600px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        width: 80%;
+    }
+    
+}
+
+@media only screen and (min-width: 600px) and (max-width: 768px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        width: 80%;
+    }
+    
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1200px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        width: 80%;
+    }
+    
+}
+
+@media only screen and (min-width: 1201px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        width: 80%;
+    }
+    
 }
