--- a/src/css/User.module.css
+++ b/src/css/User.module.css
@@ -1,15 +1,21 @@
 .container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(4, 1fr);
     gap: 10px;
     width: 100%;
+    align-items: center;
+    flex-wrap: wrap;
 }
 
 .item {
     border: 2px solid #000;
     border-radius: 10px;
     background-color: #D3DEFE;
+}
+
+.item:hover {
+    background-color: #8292c2;
 }
 
 .detail {
