--- a/src/css/PostList.module.css
+++ b/src/css/PostList.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: #F3F4F5;
 }
 
 .container {
@@ -12,6 +13,20 @@
     grid-template-rows: repeat(3, 1fr);
     gap: 10px;
     width: 100%;
+}
+
+.containerFilter {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.containerFilterInput {
+    width: 250px;
+    height: 25px;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 25px;
 }
 
 .item {
@@ -26,6 +41,9 @@
     font-size: 20px;
     border-radius: 20px;
     padding: 30px;
+    box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
+    -webkit-box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
 }
 
 .item:hover {
@@ -70,7 +88,7 @@
     cursor: pointer;
 }
 
-@media only screen and (max-width: 600px) {
+@media (min-width: 320px) and (max-width: 480px) {
     .container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -78,10 +96,9 @@
         gap: 10px;
         width: 80%;
     }
-    
 }
 
-@media only screen and (min-width: 600px) and (max-width: 768px) {
+@media (min-width: 481px) and (max-width: 768px) {
     .container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
@@ -89,10 +106,19 @@
         gap: 10px;
         width: 80%;
     }
-    
 }
 
-@media only screen and (min-width: 769px) and (max-width: 1200px) {
+@media (min-width: 769px) and (max-width: 1024px) {
+    .container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        gap: 10px;
+        width: 80%;
+    }
+}
+
+@media (min-width: 1025px) and (max-width: 1200px) {
     .container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -100,10 +126,9 @@
         gap: 10px;
         width: 80%;
     }
-    
 }
 
-@media only screen and (min-width: 1201px) {
+@media (min-width: 1201px) {
     .container {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
@@ -111,5 +136,4 @@
         gap: 10px;
         width: 80%;
     }
-    
 }
