--- a/src/css/PostList.module.css
+++ b/src/css/PostList.module.css
@@ -89,12 +89,16 @@
 }
 
 @media (min-width: 320px) and (max-width: 480px) {
+    .containerInitial {
+        width: 100%;
+        background-color: #F3F4F5;
+    }
     .container {
         display: grid;
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 10px;
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -104,7 +108,7 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 10px;
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -114,7 +118,7 @@
         grid-template-columns: repeat(1, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 10px;
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -124,7 +128,7 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 10px;
-        width: 80%;
+        width: 100%;
     }
 }
 
@@ -134,6 +138,6 @@
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: repeat(3, 1fr);
         gap: 10px;
-        width: 80%;
+        width: 100%;
     }
 }
