--- a/src/css/User.module.css
+++ b/src/css/User.module.css
@@ -18,9 +18,9 @@
     border: 2px solid #000;
     border-radius: 10px;
     background-color: #D3DEFE;
-    box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.55);
--webkit-box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.55);
--moz-box-shadow: 0px 5px 12px 0px rgba(0,0,0,0.55);
+    box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
+    -webkit-box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
+    -moz-box-shadow: 0px 5px 12px 0px rgba(0, 0, 0, 0.55);
 }
 
 .item:hover {
