--- a/src/css/User.module.css
+++ b/src/css/User.module.css
@@ -14,6 +14,20 @@
     flex-wrap: wrap;
 }
 
+.containerFilter {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+
+.containerFilterInput {
+    width: 250px;
+    height: 25px;
+    text-align: center;
+    border-radius: 10px;
+    margin-bottom: 25px;
+}
+
 .item {
     border: 2px solid #000;
     border-radius: 10px;
